--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael Anderson - Senior QA Professional</title>
+    <title>Vadim Gumarov</title>
+    <meta name="description" content="Vadim Gumarov - IT Leadership & Digital Transformation">
+
     <style>
         :root {
-            --primary-color: #2c3e50;
-            --secondary-color: #34495e;
-            --accent-color: #3498db;
-            --background-color: #ffffff;
-            --text-color: #333333;
-            --border-color: #e1e8ed;
-            --section-spacing: 2.5rem;
+            --primary-dark: #0a0a0a;
+            --primary-light: #ffffff;
+            --accent-blue: #007aff;
+            --gray-medium: #666666;
+            --gray-light: #f5f5f5;
+            --gray-border: #e5e5e5;
+            --shadow-light: rgba(0, 0, 0, 0.05);
+            --shadow-medium: rgba(0, 0, 0, 0.1);
         }
 
         * {
@@ -22,254 +25,322 @@
         }
 
         body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            line-height: 1.6;
-            color: var(--text-color);
-            background-color: var(--background-color);
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+                         'Helvetica Neue', Arial, sans-serif;
+            color: var(--primary-dark);
+            background-color: var(--primary-light);
+            line-height: 1.5;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
         }
 
         .container {
-            max-width: 900px;
+            max-width: 1200px;
             margin: 0 auto;
-            padding: 4rem 2rem;
+            padding: 80px 40px;
         }
 
-        header {
-            margin-bottom: var(--section-spacing);
-            border-bottom: 2px solid var(--border-color);
-            padding-bottom: 2rem;
+        /* Hero Section */
+        .hero {
+            display: grid;
+            grid-template-columns: 1fr auto;
+            gap: 80px;
+            align-items: start;
+            margin-bottom: 120px;
+        }
+
+        .hero-content {
+            max-width: 600px;
+        }
+
+        .hero-photo {
+            width: 200px;
+            height: 200px;
+            border-radius: 8px;
+            overflow: hidden;
+            box-shadow: 0 4px 20px var(--shadow-light);
+        }
+
+        .hero-photo img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
 
         h1 {
-            font-size: 2.5rem;
-            color: var(--primary-color);
-            margin-bottom: 0.5rem;
+            font-size: 54px;
             font-weight: 700;
+            margin-bottom: 24px;
+            letter-spacing: -0.02em;
+            line-height: 1.1;
         }
 
-        .subtitle {
-            font-size: 1.25rem;
-            color: var(--secondary-color);
-            margin-bottom: 1.5rem;
-            font-weight: 500;
+        .tagline {
+            font-size: 24px;
+            color: var(--gray-medium);
+            margin-bottom: 40px;
+            line-height: 1.4;
         }
 
-        .contact {
+        .cta-section {
             display: flex;
-            gap: 2rem;
-            color: var(--secondary-color);
+            align-items: center;
+            gap: 20px;
+            margin-bottom: 80px;
         }
 
-        .contact a {
-            color: var(--accent-color);
+        .cta-button {
+            background-color: var(--accent-blue);
+            color: var(--primary-light);
+            padding: 14px 24px;
+            border-radius: 8px;
             text-decoration: none;
-            transition: color 0.2s ease;
-        }
-
-        .contact a:hover {
-            color: var(--primary-color);
-        }
-
-        section {
-            margin-bottom: var(--section-spacing);
-        }
-
-        h2 {
-            font-size: 1.5rem;
-            color: var(--primary-color);
-            margin-bottom: 1.5rem;
             font-weight: 600;
+            font-size: 16px;
+            transition: all 0.2s ease;
         }
 
-        .summary {
-            font-size: 1.1rem;
-            color: var(--secondary-color);
-            max-width: 800px;
-            margin-bottom: 2rem;
+        .cta-button:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 6px 20px rgba(0, 122, 255, 0.3);
         }
 
-        .experience-item, .education-item {
-            margin-bottom: 2rem;
-            padding-bottom: 2rem;
-            border-bottom: 1px solid var(--border-color);
-        }
-
-        .experience-item:last-child, .education-item:last-child {
-            border-bottom: none;
-        }
-
-        .experience-header, .education-header {
+        .social-links {
             display: flex;
-            justify-content: space-between;
-            margin-bottom: 1rem;
+            gap: 16px;
         }
 
-        .company, .school {
-            font-weight: 600;
-            color: var(--primary-color);
-            font-size: 1.1rem;
+        .social-link {
+            width: 44px;
+            height: 44px;
+            background-color: var(--gray-light);
+            border-radius: 8px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-decoration: none;
+            color: var(--gray-medium);
+            transition: all 0.2s ease;
         }
 
-        .title {
-            color: var(--accent-color);
-            margin-bottom: 0.5rem;
+        .social-link:hover {
+            background-color: var(--gray-medium);
+            color: var(--primary-light);
+        }
+
+        .social-link svg {
+            width: 20px;
+            height: 20px;
+            fill: currentColor;
+        }
+
+        /* Company Logos */
+        .company-logos {
+            display: flex;
+            align-items: center;
+            gap: 40px;
+            margin-bottom: 80px;
+            opacity: 0.6;
+        }
+
+        .company-logo {
+            font-size: 18px;
             font-weight: 500;
+            color: var(--gray-medium);
+            text-decoration: none;
+            transition: opacity 0.2s ease;
         }
 
-        .date {
-            color: var(--secondary-color);
+        .company-logo:hover {
+            opacity: 1;
         }
 
-        ul {
-            list-style-type: none;
-            padding-left: 0;
-        }
-
-        li {
-            margin-bottom: 0.5rem;
-            position: relative;
-            padding-left: 1.5rem;
-        }
-
-        li::before {
-            content: "•";
-            position: absolute;
-            left: 0;
-            color: var(--accent-color);
-        }
-
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-            gap: 2rem;
-        }
-
-        .skills-category {
-            margin-bottom: 1.5rem;
-        }
-
-        .skills-category h3 {
-            color: var(--primary-color);
-            margin-bottom: 1rem;
-            font-size: 1.1rem;
+        /* Section Headers */
+        .section-header {
+            font-size: 14px;
             font-weight: 600;
+            color: var(--gray-medium);
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            margin-bottom: 32px;
         }
 
-        .skills-list {
-            color: var(--secondary-color);
+        /* What I Can Help With */
+        .help-section {
+            margin-bottom: 80px;
         }
 
-        @media (max-width: 768px) {
-            .container {
-                padding: 2rem 1rem;
-            }
+        .help-list {
+            list-style: none;
+            font-size: 18px;
+            line-height: 2;
+        }
 
-            .contact {
-                flex-direction: column;
-                gap: 0.5rem;
-            }
+        .help-list li {
+            color: var(--primary-dark);
+            margin-bottom: 8px;
+        }
 
-            .experience-header {
-                flex-direction: column;
-                gap: 0.5rem;
-            }
+        /* Experience */
+        .experience-section {
+            margin-bottom: 80px;
+        }
 
-            .skills-grid {
+        .experience-item {
+            margin-bottom: 40px;
+        }
+
+        .experience-role {
+            font-size: 18px;
+            font-weight: 600;
+            color: var(--primary-dark);
+            margin-bottom: 8px;
+        }
+
+        .experience-description {
+            font-size: 16px;
+            color: var(--gray-medium);
+            line-height: 1.6;
+            max-width: 800px;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 960px) {
+            .hero {
                 grid-template-columns: 1fr;
+                gap: 40px;
+                text-align: center;
+            }
+
+            .hero-photo {
+                width: 160px;
+                height: 160px;
+                margin: 0 auto;
+            }
+
+            h1 {
+                font-size: 42px;
+            }
+
+            .tagline {
+                font-size: 20px;
+            }
+
+            .company-logos {
+                flex-wrap: wrap;
+                gap: 24px;
+                justify-content: center;
+            }
+
+            .container {
+                padding: 40px 20px;
+            }
+        }
+
+        @media (max-width: 640px) {
+            .cta-section {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 16px;
+            }
+
+            .company-logos {
+                gap: 16px;
+            }
+
+            .company-logo {
+                font-size: 16px;
             }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>Michael Anderson</h1>
-            <p class="subtitle">Senior Quality Assurance Professional</p>
-            <div class="contact">
-                <a href="mailto:m.anderson@example.com">m.anderson@example.com</a>
-                <a href="tel:+1234567890">+1 (234) 567-890</a>
-                <a href="https://linkedin.com/in/manderson">LinkedIn</a>
-            </div>
-        </header>
+        <!-- Hero Section -->
+        <section class="hero">
+            <div class="hero-content">
+                <h1>Vadim Gumarov</h1>
+                <p class="tagline">
+                    Built enterprise solutions for 100+ companies.<br>
+                    Now helping SMEs optimize through automation.
+                </p>
 
-        <section>
-            <h2>Professional Summary</h2>
-            <p class="summary">Senior Quality Assurance Professional with 13 years of experience in telecommunications and entertainment industries. Specialized in end-to-end testing methodologies, test automation, and quality process improvement. Proven track record of leading QA teams and implementing robust testing frameworks that significantly improve product quality and reduce time-to-market.</p>
+                <div class="cta-section">
+                    <a href="mailto:vadim@example.com" class="cta-button">Book consulting</a>
+                    <div class="social-links">
+                        <a href="https://linkedin.com/in/vadimgumarov" class="social-link" aria-label="LinkedIn">
+                            <svg viewBox="0 0 24 24">
+                                <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                            </svg>
+                        </a>
+                        <a href="https://github.com/vadimgumarov" class="social-link" aria-label="GitHub">
+                            <svg viewBox="0 0 24 24">
+                                <path d="M12 0C5.374 0 0 5.373 0 12c0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23A11.509 11.509 0 0112 5.803c1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576C20.566 21.797 24 17.3 24 12c0-6.627-5.373-12-12-12z"/>
+                            </svg>
+                        </a>
+                        <a href="mailto:vadim@example.com" class="social-link" aria-label="Email">
+                            <svg viewBox="0 0 24 24">
+                                <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="hero-photo">
+                <img src="profile.jpg" alt="Vadim Gumarov">
+            </div>
         </section>
 
-        <section>
-            <h2>Professional Experience</h2>
+        <!-- Company Logos -->
+        <div class="company-logos">
+            <span class="company-logo">Microsoft</span>
+            <span class="company-logo">IBM</span>
+            <span class="company-logo">SAP</span>
+            <span class="company-logo">Oracle</span>
+        </div>
+
+        <!-- What I Can Help With -->
+        <section class="help-section">
+            <h2 class="section-header">What I Can Help With</h2>
+            <ul class="help-list">
+                <li>Digital transformation for SMEs</li>
+                <li>Process automation and optimization</li>
+                <li>IT strategy and vendor management</li>
+                <li>Team leadership and project delivery</li>
+            </ul>
+        </section>
+
+        <!-- Experience -->
+        <section class="experience-section">
+            <h2 class="section-header">Experience</h2>
+
             <div class="experience-item">
-                <div class="experience-header">
-                    <span class="company">Global Entertainment Corp</span>
-                    <span class="date">2016 - Present</span>
+                <div class="experience-role">Founder & Chief Automation Officer, Business Process Solutions</div>
+                <div class="experience-description">
+                    Building automation solutions for SMEs. Reduced manual tasks by 70% for clients through custom workflow optimization and digital transformation initiatives.
                 </div>
-                <p class="title">Senior QA Manager</p>
-                <ul>
-                    <li>Led the transformation of QA processes across 5 product lines, resulting in 40% reduction in post-release defects</li>
-                    <li>Implemented automated testing frameworks that reduced regression testing time by 60%</li>
-                    <li>Managed a team of 15 QA engineers across multiple international locations</li>
-                    <li>Established comprehensive test strategies for streaming platforms serving 10M+ users</li>
-                </ul>
             </div>
 
             <div class="experience-item">
-                <div class="experience-header">
-                    <span class="company">TelecomTech Solutions</span>
-                    <span class="date">2011 - 2016</span>
-                </div>
-                <p class="title">QA Team Lead</p>
-                <ul>
-                    <li>Directed testing efforts for mission-critical telecommunications systems</li>
-                    <li>Developed and maintained test automation frameworks using Python and Selenium</li>
-                    <li>Reduced manual testing effort by 50% through strategic test automation</li>
-                    <li>Implemented performance testing practices that identified and resolved critical bottlenecks</li>
-                </ul>
-            </div>
-        </section>
-
-        <section>
-            <h2>Technical Expertise</h2>
-            <div class="skills-grid">
-                <div class="skills-category">
-                    <h3>Testing Tools</h3>
-                    <ul class="skills-list">
-                        <li>Selenium WebDriver</li>
-                        <li>JMeter</li>
-                        <li>TestRail</li>
-                        <li>JIRA</li>
-                        <li>Jenkins</li>
-                    </ul>
-                </div>
-                <div class="skills-category">
-                    <h3>Programming</h3>
-                    <ul class="skills-list">
-                        <li>Python</li>
-                        <li>Java</li>
-                        <li>JavaScript</li>
-                        <li>SQL</li>
-                    </ul>
-                </div>
-                <div class="skills-category">
-                    <h3>Methodologies</h3>
-                    <ul class="skills-list">
-                        <li>Agile/Scrum</li>
-                        <li>CI/CD</li>
-                        <li>TDD/BDD</li>
-                        <li>Performance Testing</li>
-                    </ul>
+                <div class="experience-role">Senior IT Manager, Enterprise Digital Transformation</div>
+                <div class="experience-description">
+                    Led cross-functional teams of 10+ professionals. Delivered $500K+ projects while implementing agile methodologies that reduced delivery times by 30%.
                 </div>
             </div>
-        </section>
 
-        <section>
-            <h2>Education</h2>
-            <div class="education-item">
-                <div class="education-header">
-                    <span class="school">University of Technology</span>
-                    <span class="date">2007 - 2011</span>
+            <div class="experience-item">
+                <div class="experience-role">Digital Transformation Manager, Hospitality Tech</div>
+                <div class="experience-description">
+                    Orchestrated complete digital transformation of 110-room hotel property. Integrated cloud-based PMS with major OTAs, achieving 60% increase in occupancy rates.
                 </div>
-                <p>B.S. in Computer Science</p>
+            </div>
+
+            <div class="experience-item">
+                <div class="experience-role">Co-Founder & Business Development Director, Construction Consortium</div>
+                <div class="experience-description">
+                    Built comprehensive construction industry platform consolidating tender auctions. Created integrated ecosystem enabling end-to-end project delivery with 25% cost savings.
+                </div>
             </div>
         </section>
     </div>
