Update company names to proper capitalization

--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@
             <span class="company-logo-text">NBCU</span>
             <span class="company-logo-text">Peacock</span>
             <span class="company-logo-text">VH VVaG</span>
-            <span class="company-logo-text">JAUGAPOL</span>
-            <span class="company-logo-text">JURATE HOTEL</span>
+            <span class="company-logo-text">Jaugapol</span>
+            <span class="company-logo-text">Jurate Hotel</span>
         </div>
 
         <!-- What I Can Help With -->
