--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
         .company-logos {
             display: flex;
             align-items: center;
+            justify-content: center;
             gap: 30px;
             margin: 40px 0;
             padding: 30px 0;
