Remove dollar amount from Senior IT Manager description

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
             <div class="experience-item">
                 <div class="experience-role">Senior IT Manager, Enterprise Digital Transformation</div>
                 <div class="experience-description">
-                    Led cross-functional teams of 10+ professionals. Delivered $500K+ projects while implementing agile methodologies that reduced delivery times by 30%.
+                    Led cross-functional teams of 10+ professionals. Delivered projects while implementing agile methodologies that reduced delivery times by 30%.
                 </div>
             </div>
 
